チャットのデータベースへの記録を実装。

--- a/src/browser/css/common.scss
+++ b/src/browser/css/common.scss
@@ -70,6 +70,10 @@ webview {
 	border-bottom: solid #cccccc 0.1em;
 }
 
+.chatSystemLog {
+	color: #ff0000;
+}
+
 .chatLog .timestamp {
 	display: inline-block;
 	vertical-align: top;
